API logic added. Logging with logging package added.

--- a/lib/presentation/constants/l10n/app_ru.arb
+++ b/lib/presentation/constants/l10n/app_ru.arb
@@ -21,5 +21,6 @@
     "delete" : "Удалить",
     "importance" : "Важность",
     "save" : "СОХРАНИТЬ",
-    "do_until" : "Сделать до"
+    "do_until" : "Сделать до",
+    "empty_name" : "Нельзя создать дело без имени :("
 }
