Calendar ui changed...

--- a/lib/presentation/constants/l10n/app_ru.arb
+++ b/lib/presentation/constants/l10n/app_ru.arb
@@ -1,6 +1,6 @@
 {
     "myTasks": "Мои дела",
-    "done": "Выполнено",
+    "done_task": "Выполнено",
     "newTask" : "Новое",
     "jan" : "января",
     "feb" : "февраля",
@@ -14,6 +14,25 @@
     "okt" : "октября",
     "nov" : "ноября",
     "dec" : "декабря",
+    "january" : "Январь",
+    "february" : "Февраль",
+    "march" : "Март",
+    "april" : "Апрель",
+    "may_im" : "Май",
+    "june" : "Июнь",
+    "july" : "Июль",
+    "august" : "Август",
+    "september" : "Сентябрь",
+    "october" : "Октябрь",
+    "november" : "Ноябрь",
+    "december" : "Декабрь",
+    "sun" : "Вс",
+    "mon" : "Пн",
+    "tue" : "Вт",
+    "wed" : "Ср",
+    "thu" : "Чт",
+    "fri" : "Пт",
+    "sat" : "Сб",
     "no" : "Нет",
     "low" : "Низкий",
     "high" : "!! Высокий",
@@ -22,5 +41,7 @@
     "importance" : "Важность",
     "save" : "СОХРАНИТЬ",
     "do_until" : "Сделать до",
-    "empty_name" : "Нельзя создать дело без имени :("
+    "empty_name" : "Нельзя создать дело без имени :(",
+    "done" : "ГОТОВО",
+    "cancel" : "ОТМЕНА"
 }
